--- a/DCReader/Views/Home/Index.cshtml
+++ b/DCReader/Views/Home/Index.cshtml
@@ -1,95 +1,52 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    var color = "rgb(51, 170, 255)";
+    if (ViewData["crLevel"] != null)
+    {
+        int crLevel = (int)ViewData["crLevel"];
+        if (crLevel == 1)
+            color = "rgb(255, 245, 49);";
+        else if (crLevel == 2)
+            color = "rgb(255, 137, 27);";
+        else if (crLevel == 3)
+            color = "rgb(255 85 86)";
+        else if (crLevel == 4)
+            color = "red;";
+    }
+
+}
+@{
+    if (ViewData["output"] != null)
+    {
+        <p style="color: @color">@Html.Raw(ViewData["output"])</p>
+    }
 }
 <form class="upload-form" asp-action="Index" method="post" enctype="multipart/form-data">
-      <style>
-    .chat-box {
-        display: flex;
-        align-items: center;
-        background-color: #2c2f3f;
-        border-radius: 8px;
-        padding: 8px;
-        width: 600px;
-    }
+    <input type="file" onchange="updateFileName()" name="file" id="file" style="visibility:hidden;">
 
-    .icon {
-        width: 24px;
-        height: 24px;
-        margin-right: 8px;
-        cursor: pointer;
-        filter: brightness(0) invert(1);
-        /* Making icons white */
-    }
-
-    .message-input {
-        flex-grow: 1;
-        background-color: #1e2130;
-        border: none;
-        padding: 10px;
-        color: white;
-        border-radius: 6px;
-        outline: none;
-        font-size: 16px;
-    }
-
-    .send-button {
-        margin-left: 8px;
-        background: none;
-        border: none;
-        cursor: pointer;
-        color: #4a90e2;
-        font-size: 20px;
-    }
-
-    .send-button:hover {
-        color: #1a73e8;
-    }
-</style>
-<input type="file" name="file" id="file" style="visibility:hidden;">
-<div class="chat-box">
-    <svg onclick="uploadFile()" class="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-        class="bi bi-paperclip" viewBox="0 0 16 16">
-        <path
-            d="M4.5 3a2.5 2.5 0 0 1 5 0v9a1.5 1.5 0 0 1-3 0V5a.5.5 0 0 1 1 0v7a.5.5 0 0 0 1 0V3a1.5 1.5 0 1 0-3 0v9a2.5 2.5 0 0 0 5 0V5a.5.5 0 0 1 1 0v7a3.5 3.5 0 1 1-7 0z" />
-    </svg>
-    <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-        class="bi bi-file-earmark-code" viewBox="0 0 16 16">
-        <path
-            d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5zm-3 0A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5z" />
-        <path
-            d="M8.646 6.646a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1 0 .708l-2 2a.5.5 0 0 1-.708-.708L10.293 9 8.646 7.354a.5.5 0 0 1 0-.708m-1.292 0a.5.5 0 0 0-.708 0l-2 2a.5.5 0 0 0 0 .708l2 2a.5.5 0 0 0 .708-.708L5.707 9l1.647-1.646a.5.5 0 0 0 0-.708" />
-    </svg>
-    <textarea type="text" name="UserInput" id="Chat" class="message-input" placeholder="Your message..."></textarea>
-    <button class="send-button">
-        <svg style="transform: rotate(45deg);" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-            fill="currentColor" class="bi bi-send-fill" viewBox="0 0 16 16">
+    <div class="chat-box">
+        <svg onclick="uploadFile()" class="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+            fill="currentColor" class="bi bi-paperclip" viewBox="0 0 16 16">
             <path
-                d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471z" />
+                d="M4.5 3a2.5 2.5 0 0 1 5 0v9a1.5 1.5 0 0 1-3 0V5a.5.5 0 0 1 1 0v7a.5.5 0 0 0 1 0V3a1.5 1.5 0 1 0-3 0v9a2.5 2.5 0 0 0 5 0V5a.5.5 0 0 1 1 0v7a3.5 3.5 0 1 1-7 0z" />
         </svg>
-    </button>
-</div>
 
-    </form>
-@{
-if(ViewData["IsError"]=="true"){
-    <p style="color: red;" >@ViewData["Messeg"]</p>
-}
-
-}
-<script>
-    function uploadFile() {
-        const file = document.querySelector("[type='file']");
-        file.click();
-    }
-     function updateFileName() {
-        const fileInput = document.getElementById('file');
-        const fileNameDisplay = document.getElementById('file-name');
-        if (fileInput.files.length > 0) {
-            fileNameDisplay.textContent = fileInput.files[0].name;
-        } else {
-            fileNameDisplay.textContent = "";
+        <textarea type="text" name="UserInput" id="Chat" class="message-input" placeholder="Your message..."></textarea>
+        <button class="send-button">
+            <svg style="transform: rotate(45deg);" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                fill="currentColor" class="bi bi-send-fill" viewBox="0 0 16 16">
+                <path
+                    d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471z" />
+            </svg>
+        </button>
+        <br>
+    </div>
+    <p id="file-name">No file specified</p>
+    @{
+        if (ViewData["IsError"] == "true")
+        {
+            <p style="color: red;">@ViewData["Messeg"]</p>
         }
+
     }
-</script>
-
-
+</form>
