--- a/DCReader/Views/Home/Index.cshtml
+++ b/DCReader/Views/Home/Index.cshtml
@@ -31,7 +31,12 @@
                 d="M4.5 3a2.5 2.5 0 0 1 5 0v9a1.5 1.5 0 0 1-3 0V5a.5.5 0 0 1 1 0v7a.5.5 0 0 0 1 0V3a1.5 1.5 0 1 0-3 0v9a2.5 2.5 0 0 0 5 0V5a.5.5 0 0 1 1 0v7a3.5 3.5 0 1 1-7 0z" />
         </svg>
 
-        <textarea type="text" name="UserInput" id="Chat" class="message-input" placeholder="Your message..."></textarea>
+        <textarea type="text" name="UserInput" id="Chat" class="message-input" placeholder="Privacy Levels [c,cs,h,p] Ex:
+word1 -c
+word2 -cs
+word3 -h
+word4 -p
+        "></textarea>
         <button class="send-button">
             <svg style="transform: rotate(45deg);" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                 fill="currentColor" class="bi bi-send-fill" viewBox="0 0 16 16">
