--- a/DCReader/Views/Shared/_Layout.cshtml
+++ b/DCReader/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
             }
         }
         function handleKeyDown(event) {
-            if (event.key === "Enter") {
+            if (event.key === "Enter" || event.code === "Space") {
                 event.preventDefault(); // Prevent new div creation
                 createLine();
             }
@@ -85,11 +85,9 @@
                 const input = line.querySelector("input");
                 const select = line.querySelector("select");
                 if (input.value.trim() !== "") {
-                    output += `${input.value} -${select.value}\n`;
+                    output += `${input.value.replaceAll(/ /ig,"")} -${select.value}\n`;
                 }
             });
-            console.log(output)
-            console.log(change);
             change.value = output.trim();
             if(change.value.length !== 0)
                 change.dispatchEvent(new Event('change'));
