fix bugs 1.privacy level is shifted if the upper fileds not found 2.overflow make the text field out of orientation UI bug

--- a/DCReader/Views/Home/Index.cshtml
+++ b/DCReader/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
 @{
     if (ViewData["output"] != null)
     {
-        <p style="color: @color">@Html.Raw(ViewData["output"])</p>
+        <p style="color: @color;overflow-y: auto;max-height: 40vh;">@Html.Raw(ViewData["output"])</p>
     }
 }
 <form class="upload-form" asp-action="Index" method="post" enctype="multipart/form-data">
